<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/b2"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.taptap.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:text="@string/login"
        android:textColor="@color/teal_200"
        android:textSize="100sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:singleLine="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_log" />

        <Button
            android:id="@+id/bt_bos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_bos"/>


        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_register"/>




    </LinearLayout>

    <Button
        android:id="@+id/bta"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:text="主页" />

</LinearLayout>

