<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/输入账号"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffffff"
                android:padding="20dp"
                android:textColor="#ff000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/输入密码"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffffff"
                android:padding="20dp"
                android:password="true"
                android:textColor="#ff000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/确认密码"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffffff"
                android:padding="20dp"
                android:textColor="#ff000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_button11"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/注册"
                android:textColor="#ffffffff"
                android:textSize="16sp" />
            <Button
                android:id="@+id/login_button12"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/取消"
                android:textColor="#ffffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</FrameLayout>